[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/targets/target.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/targets/resources/small-computer.png" type="Texture" id=2]
[ext_resource path="res://src/targets/computer.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -6.9662, -2.58115, -2.7114, -6.91938, 8.05075, -6.96109, 8.09246, 3.55077, 5.00565, 7.05473, -7.00791, 7.17987 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.58518, 7.14037 )

[sub_resource type="CircleShape2D" id=6]
radius = 19.6167

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.632, 7.2106 )

[node name="Computer" type="AnimatedSprite"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
frames = SubResource( 3 )
playing = true
script = ExtResource( 3 )

[node name="Target" parent="." instance=ExtResource( 1 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="colider" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colider"]
position = Vector2( 0.419403, 0.11201 )
shape = SubResource( 5 )

[node name="heal_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="heal_zone"]
shape = SubResource( 6 )

[node name="hit_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_zone"]
position = Vector2( 0.372581, 0.229066 )
shape = SubResource( 7 )

[connection signal="body_entered" from="heal_zone" to="." method="_on_heal_zone_body_entered"]
[connection signal="body_exited" from="heal_zone" to="." method="_on_heal_zone_body_exited"]
[connection signal="area_entered" from="hit_zone" to="." method="_on_hit_zone_area_entered"]
